--- a/popup.html
+++ b/popup.html
@@ -331,8 +331,8 @@
       function showThankYouMessage() {
         const msgDiv = document.createElement("div");
         msgDiv.id = "thankYouMessage";
-        // New message: First line "CHA-CHING" with crazy animation, then next line the thank-you text.
-        msgDiv.innerHTML = "<span id='thankYouText'><span class='cha-chings'>CHA-CHING</span></span><br><span id='moreMessage'>Thanks for signing up. More sales are on the way.</span>";
+        // New message: First line "CHA-CHING" with crazy animation, then next line the final message.
+        msgDiv.innerHTML = "<span id='thankYouText'><span class='cha-chings'>CHA-CHING</span></span><br><span id='moreMessage'>More sales are on the way.</span>";
         document.body.appendChild(msgDiv);
         // Force reflow then add the fadeIn class to trigger CSS animation
         void msgDiv.offsetWidth;
@@ -342,7 +342,6 @@
         // After a delay, replace the thank you message with an embedded YouTube video
         setTimeout(() => {
           msgDiv.innerHTML = '<iframe width="560" height="315" src="https://www.youtube.com/embed/qsjOaYkoqDs?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="display:block; margin:0 auto;"></iframe>';
-          // Optionally, adjust msgDiv styling to center the video if needed
           msgDiv.style.width = "560px";
           msgDiv.style.height = "315px";
         }, 5000); // 5 seconds delay before showing the video
