--- a/popup.html
+++ b/popup.html
@@ -250,21 +250,27 @@
         transform: scale(1) rotate(0deg);
       }
     }
-  
-    /* Video Container Styles */
+    
+    /* Video Container Styles with Glowing Red Neon Border */
     #videoContainer {
       width: 560px;
       height: 315px;
       margin: 0 auto;
-      border: 10px solid;
-      border-image: linear-gradient(45deg, red, darkred, red) 1;
-      animation: borderAnimation 4s linear infinite;
+      border: 5px solid red;
+      box-shadow: 0 0 20px red;
+      animation: neonFlicker 2s infinite alternate;
       display: block;
     }
-    @keyframes borderAnimation {
-      0% { border-image-source: linear-gradient(45deg, red, darkred, red); }
-      50% { border-image-source: linear-gradient(45deg, darkred, red, darkred); }
-      100% { border-image-source: linear-gradient(45deg, red, darkred, red); }
+    @keyframes neonFlicker {
+      0% {
+        box-shadow: 0 0 10px red, 0 0 20px red, 0 0 30px red;
+      }
+      50% {
+        box-shadow: 0 0 20px red, 0 0 30px red, 0 0 40px red;
+      }
+      100% {
+        box-shadow: 0 0 10px red, 0 0 20px red, 0 0 30px red;
+      }
     }
   </style>
 </head>
@@ -284,7 +290,9 @@
         <div class="input-wrapper">
           <input type="email" name="email" id="emailInput" placeholder="Enter your email address" required />
         </div>
-        <button type="submit" id="ctaButton">Get The FREE Training &raquo;</button>
+        <button type="submit" id="ctaButton">
+          Get The FREE Training &raquo;
+        </button>
       </form>
     </div>
   </div>
@@ -350,11 +358,11 @@
         }, 1500);
       }
   
-      // Function to show thank you message with staged fadeIn and then embed the video
+      // Function to show thank you message and then embed the video
       function showThankYouMessage() {
         const msgDiv = document.createElement("div");
         msgDiv.id = "thankYouMessage";
-        // New message: "CHA-CHING" with original pop animation, then only "More sales are on the way."
+        // Final message: "CHA-CHING" with pop animation, then "More sales are on the way."
         msgDiv.innerHTML = "<span id='thankYouText'><span class='cha-chings'>CHA-CHING</span></span><br><span id='moreMessage'>More sales are on the way.</span>";
         document.body.appendChild(msgDiv);
         void msgDiv.offsetWidth;
@@ -363,16 +371,16 @@
   
         // After 5 seconds, replace the thank you message with the video embed.
         setTimeout(() => {
-          // Create a container for the video with an animated red gradient border.
+          // Create a container for the video with a glowing red neon border.
           const videoContainer = document.createElement("div");
           videoContainer.id = "videoContainer";
           videoContainer.innerHTML = '<iframe width="560" height="315" src="https://www.youtube.com/embed/qsjOaYkoqDs?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="display:block; margin:0 auto;"></iframe>';
           videoContainer.style.width = "560px";
           videoContainer.style.height = "315px";
           videoContainer.style.margin = "0 auto";
-          videoContainer.style.border = "10px solid";
-          videoContainer.style.borderImage = "linear-gradient(45deg, red, darkred, red) 1";
-          videoContainer.style.animation = "borderAnimation 4s linear infinite";
+          videoContainer.style.border = "5px solid red";
+          videoContainer.style.boxShadow = "0 0 20px red";
+          videoContainer.style.animation = "neonFlicker 2s infinite alternate";
   
           // Replace the thank you message with the video container.
           msgDiv.innerHTML = "";
@@ -400,10 +408,16 @@
   
       setTimeout(openPopup, 100);
   
-      popup.addEventListener("click", function(e) { e.stopPropagation(); });
+      // Ensure that clicks inside the popup don’t close it
+      popup.addEventListener("click", function(e) {
+        e.stopPropagation();
+      });
+      
+      // Close the popup when clicking the overlay or the close button
       popupOverlay.addEventListener("click", closePopup);
       closeBtn.addEventListener("click", closePopup);
   
+      // Handle form submission
       emailCaptureForm.addEventListener("submit", function(e) {
         e.preventDefault();
         const emailValue = document.getElementById("emailInput").value;
