--- a/phonenum.html
+++ b/phonenum.html
@@ -11,40 +11,46 @@
       padding: 0;
       box-sizing: border-box;
     }
+    /* Ultra modern dark gradient background */
     body {
-      background-color: #121212;
-      color: #fff;
-      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
+      font-family: 'Helvetica Neue', Arial, sans-serif;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    /* Container styling */
+    /* Form container with gradient glow */
     .form-container {
       background: #1e1e1e;
-      border: 2px solid rgba(255, 0, 0, 0.7);
       border-radius: 15px;
       padding: 20px;
       width: 90%;
       max-width: 400px;
       text-align: center;
       position: relative;
+      z-index: 1;
+    }
+    .form-container::before {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      right: -5px;
+      bottom: -5px;
+      border-radius: inherit;
+      background: linear-gradient(45deg, #ff1744, #ff9800);
+      z-index: -1;
+      filter: blur(15px);
+      opacity: 0.7;
       animation: pulse 2s infinite;
     }
-    /* Pulsing neon red glow */
     @keyframes pulse {
-      0% {
-        box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
-      }
-      50% {
-        box-shadow: 0 0 20px rgba(255, 0, 0, 1);
-      }
-      100% {
-        box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
-      }
+      0% { opacity: 0.7; }
+      50% { opacity: 1; }
+      100% { opacity: 0.7; }
     }
-    /* Form header */
+    /* Header style */
     .form-container h2 {
       margin-bottom: 20px;
       font-size: 1.5em;
@@ -61,19 +67,21 @@
     input[type="tel"]::placeholder {
       color: #bbb;
     }
-    /* Submit button styles */
+    /* Submit button with gradient and clear spacing */
     input[type="submit"] {
-      background-color: #ff1744;
+      background: linear-gradient(45deg, #ff1744, #ff9800);
       border: none;
       color: #fff;
       padding: 12px 20px;
       border-radius: 5px;
       cursor: pointer;
       font-size: 1em;
-      transition: background-color 0.3s ease;
+      transition: opacity 0.3s ease;
+      width: 100%;
+      margin-top: 15px;
     }
     input[type="submit"]:hover {
-      background-color: #d50000;
+      opacity: 0.8;
     }
   </style>
 </head>
@@ -86,4 +94,5 @@
     </form>
   </div>
 </body>
+</html>
 </html>
