--- a/phonenum.html
+++ b/phonenum.html
@@ -20,18 +20,50 @@
       justify-content: center;
       align-items: center;
     }
-    /* Form container with gradient glow */
+    /* White container */
     .form-container {
-      background: #1e1e1e;
+      background: #fff;
       border-radius: 15px;
       padding: 20px;
       width: 90%;
       max-width: 400px;
       text-align: center;
       position: relative;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    /* Header style */
+    .form-container h2 {
+      margin-bottom: 20px;
+      font-size: 1.5em;
+      color: #333;
+    }
+    /* Input styles */
+    input[type="tel"] {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1em;
+      margin-bottom: 15px;
+    }
+    input[type="tel"]::placeholder {
+      color: #aaa;
+    }
+    /* Submit button with pulsating gradient glow */
+    input[type="submit"] {
+      position: relative;
+      background: #ff1744;
+      border: none;
+      color: #fff;
+      padding: 12px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+      width: 100%;
+      margin-top: 15px;
       z-index: 1;
     }
-    .form-container::before {
+    input[type="submit"]::before {
       content: "";
       position: absolute;
       top: -5px;
@@ -41,8 +73,7 @@
       border-radius: inherit;
       background: linear-gradient(45deg, #ff1744, #ff9800);
       z-index: -1;
-      filter: blur(15px);
-      opacity: 0.7;
+      filter: blur(8px);
       animation: pulse 2s infinite;
     }
     @keyframes pulse {
@@ -50,44 +81,11 @@
       50% { opacity: 1; }
       100% { opacity: 0.7; }
     }
-    /* Header style */
-    .form-container h2 {
-      margin-bottom: 20px;
-      font-size: 1.5em;
-    }
-    /* Input styles */
-    input[type="tel"] {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 5px;
-      font-size: 1em;
-      margin-bottom: 15px;
-    }
-    input[type="tel"]::placeholder {
-      color: #bbb;
-    }
-    /* Submit button with gradient and clear spacing */
-    input[type="submit"] {
-      background: linear-gradient(45deg, #ff1744, #ff9800);
-      border: none;
-      color: #fff;
-      padding: 12px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1em;
-      transition: opacity 0.3s ease;
-      width: 100%;
-      margin-top: 15px;
-    }
-    input[type="submit"]:hover {
-      opacity: 0.8;
-    }
   </style>
 </head>
 <body>
   <div class="form-container">
-    <h2>Enter Phone Number</h2>
+    <h2>🔥 Enter to Get Notified</h2>
     <form action="#" method="POST">
       <input type="tel" name="phone" placeholder="Phone Number" required>
       <input type="submit" value="Submit">
