--- a/phonenum.html
+++ b/phonenum.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Phone Number Capture</title>
   <style>
-    /* Reset styles */
+    /* Global reset */
     * {
       margin: 0;
       padding: 0;
@@ -28,7 +28,6 @@
       width: 90%;
       max-width: 400px;
       text-align: center;
-      position: relative;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
     .form-container h2 {
@@ -53,17 +52,28 @@
     @keyframes neonInput {
       0%, 100% {
         border-color: #ffffff;
-        box-shadow: 0 0 5px rgba(255,255,255,0.2);
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
       }
       50% {
         border-color: #ff1744;
         box-shadow: 0 0 15px rgba(255, 23, 68, 0.8), 0 0 15px rgba(255, 152, 0, 0.8);
       }
     }
-    /* Submit button with pulsating neon red/orange gradient */
+    /* Button wrapper to hold the submit button and fire emoji */
+    .button-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+    .fire-emoji {
+      font-size: 1.5em;
+    }
+    /* Submit button with animated red/orange neon gradient and pulsating glow */
     input[type="submit"] {
       position: relative;
-      background: #ff1744;
+      background: linear-gradient(45deg, #ff1744, #ff9800, #ff1744);
+      background-size: 200% 200%;
       border: none;
       color: #fff;
       padding: 12px 20px;
@@ -72,44 +82,43 @@
       font-size: 1em;
       width: 100%;
       margin-top: 15px;
-      z-index: 1;
       overflow: hidden;
+      /* Combine two animations: one for the gradient shift and one for the pulsating glow */
+      animation: neonGradient 3s linear infinite, neonPulse 2s infinite;
     }
-    input[type="submit"]::before {
-      content: "";
-      position: absolute;
-      top: -5px;
-      left: -5px;
-      right: -5px;
-      bottom: -5px;
-      border-radius: inherit;
-      background: linear-gradient(45deg, #ff1744, #ff9800);
-      z-index: -1;
-      filter: blur(12px);
-      animation: pulse 2s infinite;
-    }
-    @keyframes pulse {
+    @keyframes neonGradient {
       0% {
-        opacity: 0.8;
-        transform: scale(1);
+        background-position: 0% 50%;
       }
       50% {
-        opacity: 1;
-        transform: scale(1.05);
+        background-position: 100% 50%;
       }
       100% {
-        opacity: 0.8;
-        transform: scale(1);
+        background-position: 0% 50%;
+      }
+    }
+    @keyframes neonPulse {
+      0% {
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
+      }
+      50% {
+        box-shadow: 0 0 20px rgba(255, 23, 68, 1), 0 0 20px rgba(255, 152, 0, 1);
+      }
+      100% {
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
       }
     }
   </style>
 </head>
 <body>
   <div class="form-container">
-    <h2>🔥 Enter to Get Notified</h2>
+    <h2>Enter to Get Notified</h2>
     <form action="#" method="POST">
       <input type="tel" name="phone" placeholder="Phone Number" required>
-      <input type="submit" value="Submit">
+      <div class="button-wrapper">
+        <input type="submit" value="Submit">
+        <span class="fire-emoji">🔥</span>
+      </div>
     </form>
   </div>
 </body>
